<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Store</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete this Product</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_product">Product</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_shipment">Shipment state</string>


    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Stock</string>


    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>


    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Select Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier">Supplier phone</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_image">Image</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_product_quantity">Units</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="shipment_storehouse">In Storehouse</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="shipment_sent">Was Sent</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="shipment_delivered">Received</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here &#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>


    <string name="editor_update_product_failed">The product update failed </string>

    <string name="editor_update_product_successful">The product update was successful </string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="delete_all_product_successful">All Products deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="delete_all_product_failed">Error deleting all products</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <string name="sales_button">Sales</string>

    <string name="stock_zero">The product\'s stock is 0. You are out of product. Add some</string>

    <string name="sales_zero">The product\'s stock is 0. You can\'t sales this product</string>

    <string name="price_no_empty">Price cannot be empty</string>
    <string name="supplier_no_empty">Supplier phone cannot be empty</string>
    <string name="sales_no_empty">Sales cannot be empty</string>
    <string name="stock_no_empty">Stock cannot be empty</string>
    <string name="image_no_empty">Stock cannot be empty</string>

    <string name="hint_product_sold"> Quantity of products sold</string>
    <string name="name_missing"> Product name can not be empty</string>
    <string name="error_name_blank">All field must be completed</string>

    <string name="label_price">Price: </string>
    <string name="label_supplier">Supplier Phone</string>
    <string name="label_sold">Products sold</string>
    <string name="label_stock">Stock </string>
    <string name="label_sale">Sales  </string>
    <string name="euro_symbol">"€"</string>
    <string name="button_select_image">Select Image</string>


</resources>
